rust/otap-dataflow/crates/engine-macros/tests/ui/non_factory_missing_id.rs
// A non-factory item (no `name` field) must supply an explicit `id`.
use otap_df_engine_macros::component_inventory;

#[component_inventory(category = Extension)]
pub struct AdminServer;

fn main() {}
